criando uma view dinamica

--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -6,7 +6,22 @@
 		</head>
 	<body>
 
-		<h1>Notícias</h1>
+    <h1>Notícias</h1>
+    
+    <table>
+      <tr>
+        <td>id</td>
+        <td>Título</td>
+        <td>Notícia</td>        
+      </tr>
+      <% for(let i=0; i < noticias.length; i++) {  %>
+      <tr>
+        <td><%= noticias[i].id %></td>
+        <td><%= noticias[i].titulo %></td>
+        <td><%= noticias[i].conteudo %></td>        
+      </tr>
+      <% } %>
+    </table>
 
 	</body>
 </html>
