implementada rota para noticia

--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -8,5 +8,19 @@
 
 		<h1>Notícia</h1>
 
+        
+    <table>
+      <tr>
+        <td>id</td>
+        <td>Título</td>
+        <td>Notícia</td>        
+      </tr>      
+      <tr>
+        <td><%= noticia[0].id %></td>
+        <td><%= noticia[0].titulo %></td>
+        <td><%= noticia[0].conteudo %></td>        
+      </tr>      
+    </table>
+
 	</body>
 </html>
