--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -2,7 +2,7 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Formulário de cadastro de Noticia</title>
+			<title>Formulário de cadastro de Notícia</title>
 		</head>
 	<body>
 
@@ -12,6 +12,15 @@
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label>
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia" />
+			<br />
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Notícia" />
+			<br />
+			<label>Nome Autor</label>
+			<input type="text" id="autor" name="autor" placeholder="Autor da Notícia" />
+			<br />
+			<label>Data dos fatos</label>
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da Notícia" />
 			<br />
 			<label>Notícia</label>
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
